[package]
name = "aoc2304"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
test-case = "3.3.1"

[build-dependencies]
anyhow = "1.0.75"
aoc_input = { version = "0.1.0", path = "../../tools/aoc_input" }
